# integrations-subsquid

./: .gitignore
Dia/: Cargo.toml
Dia/randomness-oracle/: Cargo.toml
Dia/randomness-oracle-feeder/: .env.example  README.md
Dia/randomness-oracle-io/: Cargo.toml
Dia/randomness-oracle-state/: Cargo.toml
Dia/randomness-oracle-state/src/: lib.rs
Dia/randomness-oracle/src/: contract.rs
Dia/randomness-oracle/tests/: randomness_oracle.rs
