[package]
name = "randomness-oracle"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Gear Technologies"]
readme = "README.md"

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68" }
async-trait = "0.1.68"
randomness-oracle-io = { path = "../randomness-oracle-io" }

[dev-dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68", features = ["debug"] }
gtest = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68" }

[build-dependencies]
randomness-oracle-io = { path = "../randomness-oracle-io" }
gear-wasm-builder = { git = "https://github.com/gear-tech/gear.git", rev = "5c685d0f15c412ab6ee019ceaf7ce084426dfb68" }
